--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -502,6 +502,34 @@
       "btnCancel": "Cancel",
       "btnSubmit": "Submit",
       "msgCreatedGroup": "Group is created successfully"
+    },
+    "General_tab":{
+      "GroupDetails":"Group Details",
+      "ActiveClientLoans":"Active Client Loans", 
+      "ActiveClientBorrowers": "Active Client Borrowers", 
+      "ActiveOverdueClientLoans": "Active Overdue Client Loans",
+      "ActiveGroupLoans": "Active Group Loans",  
+      "ActiveGroupBorrowers": "Active Group Borrowers",  
+      "ActiveOverdueGroupLoans":"Active Overdue Group Loans",   
+      "ActiveClients": "Active Clients", 
+      "ClientMembers": "Client Members", 
+      "Name":"Name",
+      "AccountNo.":"Account No.",
+      "Office":"Office",
+      "CustomerDetails":"Customer Details", 
+      "LoanAccounts":"Loan Accounts",
+      "LoanAccount": "Loan Account",
+      "OriginalLoan": "Original Loan",
+      "LoanBalance":"Loan Balance",
+      "AmountPaid":"Amount Paid",
+      "Type":"Type",
+      "ClosedDate":"Closed Date",
+      "SavingAccounts":"Saving Accounts",
+      "LastActive":"Last Active",
+      "Balance":"Balance",
+      "Actions":"Actions",
+      "SavingAccount":"Saving Account",
+      "NewLoanApplication":"New Loan Application"
     }
   },
   "Saving_Account_Component": {
