--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -512,7 +512,8 @@
       "ActiveGroupBorrowers": "Active Group Borrowers",  
       "ActiveOverdueGroupLoans":"Active Overdue Group Loans",   
       "ActiveClients": "Active Clients", 
-      "ClientMembers": "Client Members", 
+      "ClientMembers": "Client Members",
+      "ClientMembersDiffidentOffice": "Client Members Diffident Office", 
       "Name":"Name",
       "AccountNo.":"Account No.",
       "Office":"Office",
