--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -512,11 +512,12 @@
       "ActiveGroupBorrowers": "Active Group Borrowers",  
       "ActiveOverdueGroupLoans":"Active Overdue Group Loans",   
       "ActiveClients": "Active Clients", 
-      "ClientMembers": "Client Members", 
+      "ClientMembers": "Client Members",
+      "ClientMembersDiffidentOffice": "Client Members Diffident Office", 
       "Name":"Name",
       "AccountNo.":"Account No.",
       "Office":"Office",
-      "CustomerDetails":"Thông tin Hhách hàng", 
+      "CustomerDetails":"Thông tin khách hàng", 
       "LoanAccounts":"Loan Accounts",
       "LoanAccount": "Loan Account",
       "OriginalLoan": "Original Loan",
