--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -666,6 +666,7 @@
       "buttonSetupAll": "Áp dụng cho toàn hệ thống",
       "buttonResetDefault": "Hoàn tác",
       "buttonSubmit": "Khởi tạo",
+      "buttonBackClicked": "Quay lại",
       "buttonSubmitUpdate": "Cập nhật",
       "tableFee": {
         "Office": "Chi nhánh",
