add some global scss, remove unused dependency from yarn.lock file

--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -198,7 +198,7 @@
     "inputPlaceholderClosedCIF": "Tìm bằng tên khách hàng",
     "ViewClient": {
       "lblViewSignature": "Xem chữ kí",
-      "lblClientName": "Tên khách hàng",
+      "lblClientName": "Khách hàng",
       "lblExternalID": "CMND/CCCD",
       "lblStaff": "Nhân viên",
       "lblActivationDate": "Ngày kích hoạt",
