fix wrong routing for create client and add some icon on saving account screen

--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -540,9 +540,9 @@
       "labelAvailableBalance": "Số dư khả dụng",
       "labelAccount": "Tài khoản",
       "labelAccountSummary": "Tóm tắt tài khoản",
-      "buttonTransferFunds": "Chuyển tiền quỹ",
+      "buttonTransferFunds": "Chuyển tiền",
       "buttonWithdraw": "Rút tiền",
-      "buttonDeposit": "Chuyển tiền mặt",
+      "buttonDeposit": "Nộp tiền",
       "buttonMore": "Khác",
       "labelTotalDeposits": "Tổng số tiền gửi",
       "labelTotalWithdrawls": "Tổng số tiền rút",
