--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -261,9 +261,9 @@
       },
       "TabGeneral": {
         "lblPerformanceHistory": "Lịch sử hoạt động ",
-        "lblNoLoanCycles": "Tổng số lần ĐHT/Vay",
-        "lblNoActiveLoan": "Số món ĐHT/Vay còn tồn",
-        "lblLastLoanAmount": "Giá trị món ĐHT/vay gần nhất",
+        "lblNoLoanCycles": "Tổng số lần BHCN/Vay",
+        "lblNoActiveLoan": "Số món BHCN/Vay còn tồn",
+        "lblLastLoanAmount": "Giá trị món BHCN/vay gần nhất",
         "lblNoActiveSaving": "Số lượng tài khoản phải trả hoạt động",
         "lblActiveSavingAmount": "Tổng phải trả",
         "ActiveLoan": {
@@ -287,12 +287,12 @@
         },
         "lblActions": "Hành động",
         "LoanAccount": {
-          "lblLoanAccount": "Món Đáo hạn thẻ / Vay",
-          "lblCloseLoanAccount": "Món ĐHT/Vay đã đóng",
-          "lblOpenLoanAccount": "Món ĐHT/Vay đang tồn tại",
-          "lblAccountNo": "mã món ĐHT/vay",
+          "lblLoanAccount": "Món bán hàng công nợ / Vay",
+          "lblCloseLoanAccount": "Món BHCN/Vay đã đóng",
+          "lblOpenLoanAccount": "Món BHCN/Vay đang tồn tại",
+          "lblAccountNo": "mã món BHCN/vay",
           "lblLoanProduct": "Thuộc Sản phẩm",
-          "lblOriginalLoan": "Số tiền đáo/ Dư nợ ban đầu",
+          "lblOriginalLoan": "Số tiền bán hàng công nợ/ Dư nợ ban đầu",
           "lblLoanBalance": "Còn thu hồi/ Dư nợ",
           "lblLoanPaid": "Đã thu hồi/ Đã trả nợ",
           "lblLoanType": "Loại",
@@ -313,7 +313,7 @@
     "welcome": "Xin chào,  ",
     "searchActivity": "Tìm kiếm các hành động",
     "btnDashboard": "Dashboard ",
-    "labelIncompleteRollterm": "Món ĐHT chưa hoàn thành",
+    "labelIncompleteRollterm": "Món BHCN chưa hoàn thành",
     "btnNewCustomer": "Tạo mới khách hàng",
     "btnNewGroup": "Tạo mới đại lý",
     "Breadcrumb": {
@@ -488,7 +488,7 @@
       "CheckboxActive": "Kích hoạt",
       "tableColCartType": "Loại thẻ",
       "tableColFeeWithDraw": "Phí rút",
-      "tableColFeeRollTerm": "Phí đáo hạn",
+      "tableColFeeRollTerm": "Phí bán hàng công nợ",
       "labelActivationDate": "Ngày kích hoạt",
       "labelGroupActivationDateMsgRequired": "<strong>Yêu cầu:</strong> Chọn ngày kích hoạt",
       "labelExternal": "Mã định danh Đại lý",
@@ -505,19 +505,19 @@
     },
     "General_tab":{
       "GroupDetails":"Thông tin Đại lý",
-      "ActiveClientLoans":"Active Client Loans", 
-      "ActiveClientBorrowers": "Active Client Borrowers", 
+      "ActiveClientLoans":"Active Client Loans",
+      "ActiveClientBorrowers": "Active Client Borrowers",
       "ActiveOverdueClientLoans": "Active Overdue Client Loans",
-      "ActiveGroupLoans": "Active Group Loans",  
-      "ActiveGroupBorrowers": "Active Group Borrowers",  
-      "ActiveOverdueGroupLoans":"Active Overdue Group Loans",   
-      "ActiveClients": "Active Clients", 
+      "ActiveGroupLoans": "Active Group Loans",
+      "ActiveGroupBorrowers": "Active Group Borrowers",
+      "ActiveOverdueGroupLoans":"Active Overdue Group Loans",
+      "ActiveClients": "Active Clients",
       "ClientMembers": "Client Members",
-      "ClientMembersDiffidentOffice": "Client Members Diffident Office", 
+      "ClientMembersDiffidentOffice": "Client Members Diffident Office",
       "Name":"Name",
       "AccountNo.":"Account No.",
       "Office":"Office",
-      "CustomerDetails":"Thông tin khách hàng", 
+      "CustomerDetails":"Thông tin khách hàng",
       "LoanAccounts":"Loan Accounts",
       "LoanAccount": "Loan Account",
       "OriginalLoan": "Original Loan",
