--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -421,7 +421,7 @@
   },
   "Toolbar_Component": {
     "labelGroups": "Đại Lý",
-    "labelTerminals": "Máy POS",
+    "labelTerminals": "máy bán hàng",
     "labelInstitution": "Danh sách",
     "lblAccounting": "Kế toán",
     "lblReport": "Báo cáo",
@@ -623,18 +623,18 @@
   },
   "Terminal_Component": {
     "btnTransfer": "Điều chuyển POS",
-    "labelTerminalNameMsgPattern": "Mã Máy POS <strong>KHÔNG</strong> bắt đầu bằng ký tự đặc biệt(!@#$%^&*()_+=<>,.?]*) hoặc số",
-    "labelTerminal": "Máy POS",
-    "btnCreate": "Tạo thông tin máy POS",
+    "labelTerminalNameMsgPattern": "Mã máy bán hàng <strong>KHÔNG</strong> bắt đầu bằng ký tự đặc biệt(!@#$%^&*()_+=<>,.?]*) hoặc số",
+    "labelTerminal": "máy bán hàng",
+    "btnCreate": "Tạo thông tin máy bán hàng",
     "labelRequired": "<strong>Bắt bộc</strong>",
     "labelTerminalMsgPattern": "<strong>Không</strong> Nhập ký tự đặc biệt",
     "labelFilter": "Bộ lọc",
     "labelAction": "Thao tác",
-    "labelShowClosedTerminal":"Hiển thị máy POS đã đóng",
+    "labelShowClosedTerminal":"Hiển thị máy bán hàng đã đóng",
     "tableTerminal": {
-      "terminalNo": "Mã máy POS",
-      "terminalCode": "Code máy POS",
-      "terminalName": "Tên POS",
+      "terminalNo": "Mã máy bán hàng",
+      "terminalCode": "Code máy bán hàng",
+      "terminalName": "Tên máy bán hàng",
       "minFeeDefault": "Phí mặc định tối thiểu",
       "createdBy": "Tài khoản tạo",
       "createdDate": "Ngày tạo",
@@ -647,12 +647,12 @@
       "labelMsgOutOffMax": "Giá trị <strong>lớn nhất là 100%</strong>",
       "labelMsgOutOffMin": "Giá trị <strong>nhổ nhất 0%</strong>",
       "labelRequired": "<strong>Bắt bộc</strong>",
-      "labelEdit": "Chỉnh sửa thông tin máy POS",
+      "labelEdit": "Chỉnh sửa thông tin máy bán hàng",
       "labelCreate": "Tạo POS",
       "labelGeneral": "Cài đặt Phí",
       "labelTerminalId": "Mã POS",
       "labelTerminalCode": "Code POS",
-      "labelTerminalName": "Tên POS",
+      "labelTerminalName": "Tên máy bán hàng",
       "labelLimitPerDay": "Hạn mức số tiền giao dịch trong ngày",
       "labelMerchantId": "Đối tác",
       "labelOffice": "Chi nhánh",
@@ -662,7 +662,7 @@
       "labelCogsPercentage": "Phí Chi nhánh(%)",
       "labelMinPercentage": "Phí KH thấp nhất(%)",
       "labelMaxPercentage": "Phí KH cao nhất(%)",
-      "labelMaxLimitAmount": "Hạn mức máy POS",
+      "labelMaxLimitAmount": "Hạn mức máy bán hàng",
       "labelLevelLimit": "Số lần giao dịch trong ngày",
       "buttonSetupAll": "Áp dụng cho toàn hệ thống",
       "buttonResetDefault": "Hoàn tác",
@@ -681,14 +681,14 @@
       }
     },
     "FormTransfer": {
-      "labelTransfer": "Điều chuyển máy POS",
-      "labelTerminalId": "Mã máy POS",
-      "labelTerminalName": "Tên máy POS",
+      "labelTransfer": "Điều chuyển máy bán hàng",
+      "labelTerminalId": "Mã máy bán hàng",
+      "labelTerminalName": "Tên máy bán hàng",
       "labelOffice": "Chi nhánh",
       "labelLimitRemain": "Hạn mức",
       "labelOfficeToTransfer": "Chuyển đến chi nhánh",
       "btnSubmit": "Thực hiện",
-      "msgErrorLimitDaily": "Máy POS KHÔNG điều chuyển được do KHÔNG có hạn mức giao dịch trong ngày, Vui lòng liên hệ IT để hỗ trợ."
+      "msgErrorLimitDaily": "máy bán hàng KHÔNG điều chuyển được do KHÔNG có hạn mức giao dịch trong ngày, Vui lòng liên hệ IT để hỗ trợ."
     }
   },
   "labelCurrency": "đ",
