add transfer from group to client inside

--- a/src/assets/i18n/vi-VN.json
+++ b/src/assets/i18n/vi-VN.json
@@ -541,6 +541,7 @@
       "labelAccount": "Tài khoản",
       "labelAccountSummary": "Tóm tắt tài khoản",
       "buttonTransferFunds": "Chuyển tiền",
+      "buttonTransferFundsFromGroupToClient": "Chuyển tiền phí cho thành viên",
       "buttonWithdraw": "Rút tiền",
       "buttonDeposit": "Nộp tiền",
       "buttonMore": "Khác",
